--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
     <body>
             <fieldset>
-                <img class="img_pos" src="c:\Users\Administrator\Desktop\IMG_20240510_003438.jpg">
+                <img class="img_pos" src="IMG-20240510_003438.jpg">
 <div class="search-container">
     <input type="text" class="search-bar" placeholder="Search...">
 </div>
@@ -98,7 +98,7 @@
 <h2>Convinient Space</h2>
 <hr>
 <div class="container">
-    <img class="img_deg" src="c:\Users\Administrator\Desktop\IMG-20240516-WA0146.jpg" alt="Background Image" width="800" height="600">
+    <img class="img_deg" src="IMG-20240516-WA0146.jpg" alt="Background Image" width="800" height="600">
     <div class="overlay">
         <a href="works.html">Book your Appointment here</a>
     </div>
