--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
     <body>
             <fieldset>
-                <img class="img_pos" src="IMG-20240510_003438.jpg">
+                <img class="img_pos" src="IMG_20240510_003438.jpg">
 <div class="search-container">
     <input type="text" class="search-bar" placeholder="Search...">
 </div>
