--- a/index.html
+++ b/index.html
@@ -162,10 +162,11 @@
     </div>
     <div class="panel middle-panel">
         <h2>LOCATE US</h2>
-        <p>We are located at Roysambu just behind Thika Road Mall</p>
+        <p>We are located at Roysambu behind Thika Road Mall</p>
         <p>Email us on</p>
         <a href="mailto:shegeeeparlour@gmail.com">
             <img src="https://upload.wikimdia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" style="width:40px; height: 50px;">
+        </a>
     </div>
     <div class="panel right-panel">
         <h2>SOCIAL MEDIA</h2>
