--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 </div>
 <div>
-    <h2> read comments here</h2>
+    <h2> ALL ARE WELCOME</h2>
     <hr>
     <div class="pos_cen">
         <h2>our clients</h2>
