--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <img class="img_pos" src="IMG_20240510_003438.jpg">
 <div class="search-container">
     <input type="text" class="search-bar" placeholder="Search...">
+    <input type="submit" value="Go">
 </div>
    <div class="pos_cen">
                       <h1 class="stylish-heading">SHEGEEE BEAUTY PARLOUR</h1>
