--- a/works.html
+++ b/works.html
@@ -15,5 +15,8 @@
     <input type="text" id="location" name="location" required><br><br>
     <input type="submit" value="Submit">
 </form>
+    <a href="https://api.whatsapp.com/send?phone=0114292093&text=Hello,%20I%20am%20interested%20in%20beauty%20parlour." target="_blank">
+        <img src="whatsapp-icon.png" alt="Whatsapp Icon" class="whatsapp-icon">
+    </a>
 </body>
 </html>
