--- a/works.html
+++ b/works.html
@@ -15,8 +15,8 @@
     <input type="text" id="location" name="location" required><br><br>
     <input type="submit" value="Submit">
 </form>
-    <a href="https://api.whatsapp.com/send?phone=15551234567&text=Hello,%20I%20am%20interested%20in%20your%20services." target="_blank">
-    <img src="https://www.example.com/path/to/online/whatsapp-icon.png" alt="WhatsApp Icon" class="whatsapp-icon">
+    <a href="https://api.whatsapp.com/send?phone=+(254)114292093&text=Hello,%20I%20am%20interested%20in%20your%20services." target="_blank">
+    <img src="https://example.com/path/to/online/whatsapp-icon.png" alt="WhatsApp Icon" class="whatsapp-icon" style="width:40px;height:40px;">
 </a>
 </body>
 </html>
