--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
     <input type="submit" value="Submit">
 </form>
     <a href="https://api.whatsapp.com/send?phone=+(254)114292093&text=Hello,%20I%20am%20interested%20in%20your%20services." target="_blank">
-    <img src="https://example.com/path/to/online/whatsapp-icon.png" alt="WhatsApp Icon" class="whatsapp-icon" style="width:40px;height:40px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/whatsapp.svg" alt="WhatsApp Icon" class="whatsapp-icon" style="width:40px;height:40px;">
 </a>
 </body>
 </html>
