--- a/works.html
+++ b/works.html
@@ -15,6 +15,7 @@
     <input type="text" id="location" name="location" required><br><br>
     <input type="submit" value="Submit">
 </form>
+    <p>Whatssapp us here</p>
     <a href="https://api.whatsapp.com/send?phone=+(254)114292093&text=Hello,%20I%20am%20interested%20in%20your%20services." target="_blank">
     <img src="icons8-whatsapp-48.png" alt="WhatsApp Icon" class="whatsapp-icon" style="width:40px;height:40px;">
 </a>
