--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div>
     <img class="img_deg" src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg">
 </div>
-<h1>The Best Salon in Nairobi Kenya</h1>
+<h1>The Best Parlour in Nairobi Kenya</h1>
 
 
 <div class="pos_cen">
@@ -109,6 +109,12 @@
 </div>
 <div>
     <h2> ALL ARE WELCOME</h2>
+    <p>Find us on Whatsapp to here</p>
+    
+    <a href="https://api.whatsapp.com/send?phone=+(254)114292093&text=Hello,%20I%20am%20interested%20in%20your%20services." target="_blank">
+    <img src="icons8-whatsapp-48.png" alt="WhatsApp Icon" class="whatsapp-icon" style="width:40px;height:40px;">
+</a>
+
     <hr>
     <div class="pos_cen">
         <h2>our clients</h2>
