--- a/index.html
+++ b/index.html
@@ -81,16 +81,50 @@
     <button class="carousel-button prev-arrow" onclick="prevSlide()">
 <p><</p>
     </button>
-    <div class="carousel-slide">
-        <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/j/u/6/medium-beauti-salon-wall-poster-wallpaper-as-43-prime-home-decor-original-imaghz8hm5kshu8z.jpeg?q=90&crop=false" alt="Image 1">
-        <img src="https://thumbs.dreamstime.com/b/woman-facial-mask-beauty-salon-22945999.jpg" alt="Image 2">
-        <img src="https://t3.ftcdn.net/jpg/01/83/63/78/360_F_183637844_v44raKnyUILQAHd5K20c7t8ZUwqeLKy7.jpg" alt="Image 3">
-        <img src="https://www.avikalp.com/cdn/shop/products/MWZ3635_wallpaper2.jpg?v=1654843598" alt="Image 4"> 
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSV7Q0WL0MiuDGtMVdEQ2aKmllumjObLPu-nJkfOVa35xJZCoTlAECTAZfehw&s" alt="Image 5">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXYogL1TXXcIjohpoUgm6_vRvMxVZ7wqTqxjQ9Spbhrb8Uv9aZf9RHJogaDg&s" alt="Image 6">
-        <img src="https://media.istockphoto.com/id/1297624578/photo/spouses-receiving-relaxing-beauty-treatment-lying-at-luxury-spa-center.jpg?s=612x612&w=0&k=20&c=6S_Og4bKn2UNuzGQ7PIsQDToflBmBW5p6swChR1uw3U=" alt="Image 7">
-        <img src="https://media.istockphoto.com/id/1349298950/photo/close-up-of-unrecognizable-hairdresser-cutting-a-female-customer%C3%A2s-hair.jpg?s=612x612&w=0&k=20&c=s-FpOPuIcR5ULS7pKldF2AMNgmD2-sq_wzsTzqPUoxM=" alt="image 8">
-        
+   <div id="slides_top"> 
+    <div class="arrivals-image-container">   
+        <div class="arrival-slides-ct">
+            <div class="arrival-slides">
+                <img src="./New Arrivals/1.jpg">
+                <P>Bead Jewerly</P>
+                <P class="price"> Starting from Ksh 500/=</P>
+            </div>
+            <div class="arrival-slides">
+                <img src="./New Arrivals/2.jpg">
+                <P>Silver and blue gem combo earings</P>
+                <p class="price">Ksh 3250/=</p>
+            </div>
+
+            <div class="arrival-slides">
+                <img src="./New Arrivals/3.jpg">
+                <P>Jadau Jewerly</P>
+                <p class="price">Starting from Ksh4000/=</p>
+            </div>
+            <div class="arrival-slides">
+                <img src="./New Arrivals/4.jpg">
+                <P>Antique Jewerly</P>
+                <p class="price">From Ksh 650/=</p>
+            </div>
+            <div class="arrival-slides">
+                <img src="./New Arrivals/5.jpg">
+                <P></P>Birthstone Rings</P>
+                <p class="price">Ksh 1200/=</p>
+            </div>
+            <div class="arrival-slides">
+                <img src="./New Arrivals/6.jpg">
+                <P>Diamond gems</P>
+                <p class="price">Ksh 8450/=</p>
+            </div>
+            <div class="arrival-slides">
+                <img src="./New Arrivals/7.jpg">
+                <P>Coctail Rings</P>
+                <p class="price">Ksh2000/=</p>
+            </div>
+            <div class="arrival-slides">
+                <img src="./New Arrivals/8.jpg">
+                <P>Solitaire Rings</P>
+                <p class="price">From Ksh 4500/=</p>
+            </div>
     </div>
     <button class="carousel-button next-arrow" onclick="nextSlide()">
         <p>></p>
