--- a/index.html
+++ b/index.html
@@ -82,45 +82,45 @@
 <p><</p>
     </button>
    <div id="slides_top"> 
-    <div class="arrivals-image-container">   
+    <div class="carousel-slide">   
         <div class="arrival-slides-ct">
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/1.jpg">
                 <P>Bead Jewerly</P>
                 <P class="price"> Starting from Ksh 500/=</P>
             </div>
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/2.jpg">
                 <P>Silver and blue gem combo earings</P>
                 <p class="price">Ksh 3250/=</p>
             </div>
 
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/3.jpg">
                 <P>Jadau Jewerly</P>
                 <p class="price">Starting from Ksh4000/=</p>
             </div>
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/4.jpg">
                 <P>Antique Jewerly</P>
                 <p class="price">From Ksh 650/=</p>
             </div>
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/5.jpg">
                 <P></P>Birthstone Rings</P>
                 <p class="price">Ksh 1200/=</p>
             </div>
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/6.jpg">
                 <P>Diamond gems</P>
                 <p class="price">Ksh 8450/=</p>
             </div>
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/7.jpg">
                 <P>Coctail Rings</P>
                 <p class="price">Ksh2000/=</p>
             </div>
-            <div class="arrival-slides">
+            <div class="carousel-slides">
                 <img src="./New Arrivals/8.jpg">
                 <P>Solitaire Rings</P>
                 <p class="price">From Ksh 4500/=</p>
