--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
     <h2>Our Relaxing Services</h2>
     <hr>
 <div class="carousel-container">
-    <button class="carousel-button prev-arrow" onclick="prevSlide()">
+    <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
 <p><</p>
     </button>
-   <div id="slides_top"> 
     <div class="carousel-slide">   
                 <img src="./New Arrivals/1.jpg">
                 <P>Bead Jewerly</P>
@@ -108,7 +107,7 @@
                 <P>Solitaire Rings</P>
                 <p class="price">From Ksh 4500/=</p>
     </div>
-    <button class="carousel-button next-arrow" onclick="nextSlide()">
+    <button class="next" onclick="moveCarousel(1)">&#10095;</button>
         <p>></p>
     </button>
 
