--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h2>Our Relaxing Services</h2>
     <hr>
 <div class="carousel-container">
-    <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
+   <button class="carousel-button prev-arrow" onclick="prevSlide()">
 <p><</p>
     </button>
     <div class="carousel-slide">   
@@ -107,7 +107,7 @@
                 <P>Solitaire Rings</P>
                 <p class="price">From Ksh 4500/=</p>
     </div>
-    <button class="next" onclick="moveCarousel(1)">&#10095;</button>
+    <button class="carousel-button next-arrow" onclick="nextSlide()">
         <p>></p>
     </button>
 
