--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
     <body>
             <fieldset>
-                <img class="img_pos" src="c:\Users\Administrator\Desktop\IMG_20240510_003438.jpg">
+                <img class="img_pos" src="IMG-20240516-WA0146.jpg">
 <div class="search-container">
     <input type="text" class="search-bar" placeholder="Search...">
 </div>
@@ -68,7 +68,7 @@
     </div>
     </div>
 <div>
-    <img class="img_deg" src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg">
+    <img src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg">Background Image" width="1000" height="600">
 </div>
 <h1>The Best Salon in Nairobi Kenya</h1>
 
@@ -99,7 +99,7 @@
 <h2>Convinient Space</h2>
 <hr>
 <div class="container">
-    <img class="img_deg" src="c:\Users\Administrator\Desktop\IMG-20240516-WA0146.jpg" alt="Background Image" width="800" height="600">
+    <img class="IMG_20240510_003438.jpg" alt="Background Image" width="1000" height="600">
     <div class="overlay">
         <a href="works.html">Book your Appointment here</a>
     </div>
