--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     </div>
 <div>
-    <img src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg" width="1000" height="600">
+    <img src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg" width="1500" height="700">
 </div>
 <h1>The Best Salon in Nairobi Kenya</h1>
 
@@ -99,7 +99,7 @@
 <h2>Convinient Space</h2>
 <hr>
 <div class="container">
-    <img class="IMG-20240516-WA0146.jpg" width="1000" height="600">
+    <img src="IMG-20240516-WA0146.jpg" width="1500" height="800">
     <div class="overlay">
         <a href="works.html">Book your Appointment here</a>
     </div>
