--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <p>+254 114292093 </p> <p>Email us on:shegeeeparlour@gmail.com</p>
     </div>
     </div>
-<div>
-    <img src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg" width="1500" height="700">
+     <div class="container">
+    <img src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg" width="1600" height="700">
 </div>
 <h1>The Best Salon in Nairobi Kenya</h1>
 
@@ -77,8 +77,8 @@
     <h2>Our Relaxing Services</h2>
     <hr>
 <div class="carousel-container">
-          
-<p> previous</p>
+          <button class="carousel-button prev-arrow" onclick="prevSlide()">
+<p><</p>
     </button>
     <div class="carousel-slide">
         <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/j/u/6/medium-beauti-salon-wall-poster-wallpaper-as-43-prime-home-decor-original-imaghz8hm5kshu8z.jpeg?q=90&crop=false" alt="Image 1">
@@ -92,14 +92,14 @@
         
     </div>
     <button class="carousel-button next-arrow" onclick="nextSlide()">
-        <p>next</p>
+        <p>></p>
     </button>
 
 </div>
 <h2>Convinient Space</h2>
 <hr>
 <div class="container">
-    <img src="IMG-20240516-WA0146.jpg" width="1500" height="800">
+    <img src="IMG-20240516-WA0146.jpg" width="1600" height="800">
     <div class="overlay">
         <a href="works.html">Book your Appointment here</a>
     </div>
