--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
         <p>+254 114292093 </p> <p>Email us on:shegeeeparlour@gmail.com</p>
     </div>
     </div>
-     <div class="container">
-    <img src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg" width="1600" height="700">
-</div>
+    <img class="img_pos" src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg"
+
 <h1>The Best Salon in Nairobi Kenya</h1>
 
 
