--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
         <p>+254 114292093 </p> <p>Email us on:shegeeeparlour@gmail.com</p>
     </div>
     </div>
+      <div>                    
     <img class="img_deg" src="https://w0.peakpx.com/wallpaper/257/115/HD-wallpaper-custom-modern-fashion-beauty-salon-semi-permanent-eyebrow-lip-nail-wall-background-3d-papel-parede-aliexpress-beautician.jpg"
-
+        </div>
+        <div>
 <h1>The Best Salon in Nairobi Kenya</h1>
+                      </div>
 
 
 <div class="pos_cen">
