--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
     <body>
        
     </header>
-
+<div>
         <h1 id="heading">SHEGEEE BEAUTY PARLOUR</h1>
-        <div id="after-heading-container">
-            <div class="search-bar">
-                <div class="search-field">
-                    <input type="text" id="search" placeholder="Search">
-                </div>
+     
             </div>
           <img class="img_pos" src="IMG_20240510_003438.jpg>
       <div class="search-container">
