--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./stylesheet.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         
     <title>SHEGEEE BEAUTY PARLOUR</title>
@@ -369,6 +369,6 @@
                 <h3 class="button-send"><button onclick="sendMessage()">Send</button></h3>
             </div>
         </footer>
-<script src="script.js"></script>
+<script src="scripts.js"></script>
     </body>
 </html>
