--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <h2>Convinient Space</h2>
 <hr>
 <div class="container">
-    <img class="img_loc" src="IMG-20240516-WA0146.jpg" width="1600" height="800">
+    <img src="IMG-20240516-WA0146.jpg" width="1600" height="800">
     <div class="overlay">
         <a href="works.html">Book your Appointment here</a>
     </div>
