--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
     </button>
     <div class="carousel-slide">
         <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/j/u/6/medium-beauti-salon-wall-poster-wallpaper-as-43-prime-home-decor-original-imaghz8hm5kshu8z.jpeg?q=90&crop=false" alt="Image 1">
+        <p>cosmetics</p>
         <img src="https://thumbs.dreamstime.com/b/woman-facial-mask-beauty-salon-22945999.jpg" alt="Image 2">
+        <p>face masking</p>
         <img src="https://t3.ftcdn.net/jpg/01/83/63/78/360_F_183637844_v44raKnyUILQAHd5K20c7t8ZUwqeLKy7.jpg" alt="Image 3">
+        <p>tanning</p>
         <img src="https://www.avikalp.com/cdn/shop/products/MWZ3635_wallpaper2.jpg?v=1654843598" alt="Image 4"> 
+        <p>huge space</p>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSV7Q0WL0MiuDGtMVdEQ2aKmllumjObLPu-nJkfOVa35xJZCoTlAECTAZfehw&s" alt="Image 5">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXYogL1TXXcIjohpoUgm6_vRvMxVZ7wqTqxjQ9Spbhrb8Uv9aZf9RHJogaDg&s" alt="Image 6">
         <img src="https://media.istockphoto.com/id/1297624578/photo/spouses-receiving-relaxing-beauty-treatment-lying-at-luxury-spa-center.jpg?s=612x612&w=0&k=20&c=6S_Og4bKn2UNuzGQ7PIsQDToflBmBW5p6swChR1uw3U=" alt="Image 7">
