--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <p><</p>
     </button>
     <div class="carousel-slide">
-        <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/j/u/6/medium-beauti-salon-wall-poster-wallpaper-as-43-prime-home-decor-original-imaghz8hm5kshu8z.jpeg?q=90&crop=false" alt="Image 1">
-        <p>cosmetics</p>
+        <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/j/u/6/medium-beauti-salon-wall-poster-wallpaper-as-43-prime-home-decor-original-imaghz8hm5kshu8z.jpeg?q=90&crop=false" alt="Image 1"> <p>cosmetics</p>
+       
         <img src="https://thumbs.dreamstime.com/b/woman-facial-mask-beauty-salon-22945999.jpg" alt="Image 2">
         <p>face masking</p>
         <img src="https://t3.ftcdn.net/jpg/01/83/63/78/360_F_183637844_v44raKnyUILQAHd5K20c7t8ZUwqeLKy7.jpg" alt="Image 3">
