--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
 
 </div>
 <div>
-    <h2> read comments here</h2>
+    <p>Find us on Whatsapp  here</p>
+    
+    <a href="https://api.whatsapp.com/send?phone=+(254)114292093&text=Hello,%20I%20am%20interested%20in%20your%20services." target="_blank">
+    <img src="icons8-whatsapp-48.png" alt="WhatsApp Icon" class="whatsapp-icon" style="width:40px;height:40px;">
+</a>
     <hr>
     <div class="pos_cen">
         <h2>our clients</h2>
@@ -145,6 +149,10 @@
 </div>
 <div>
     <h2> FOLLOW US ON INSTAGRAM</h2>
+    <p>shegeee_parlour</p>
+    <a href="https://www.instagram.com/shegeee_parlour"target="-blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="instagram" style="width:40px;height:40px;">
+    </a>
     <hr>
     <img src="https://images.pexels.com/photos/1884582/pexels-photo-1884582.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Image 1"  width="300" height="200">
     <img src="https://images.pexels.com/photos/3993398/pexels-photo-3993398.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Image 2"  width="300" height="200">
@@ -161,6 +169,10 @@
     <div class="panel middle-panel">
         <h2>LOCATE US</h2>
         <p>We are located at Roysambu just behind Thika Road Mall</p>
+        <p>Email us on</p>
+        <a href="mailto:shegeeeparlour@gmail.com">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email" style="width:40px; height: 30px;">
+        </a>
     </div>
     <div class="panel right-panel">
         <h2>SOCIAL MEDIA</h2>
