--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
 <p><</p>
     </button>
     <div class="carousel-slide">
+        <div class="carousel-item>
         <img src="https://rukminim2.flixcart.com/image/850/1000/xif0q/poster/j/u/6/medium-beauti-salon-wall-poster-wallpaper-as-43-prime-home-decor-original-imaghz8hm5kshu8z.jpeg?q=90&crop=false" alt="Image 1"> 
-        <img src="https://thumbs.dreamstime.com/b/woman-facial-mask-beauty-salon-22945999.jpg" alt="Image 2">
+        <p>my image 1</p>
+            <img src="https://thumbs.dreamstime.com/b/woman-facial-mask-beauty-salon-22945999.jpg" alt="Image 2">
         <img src="https://t3.ftcdn.net/jpg/01/83/63/78/360_F_183637844_v44raKnyUILQAHd5K20c7t8ZUwqeLKy7.jpg" alt="Image 3">
         <img src="https://www.avikalp.com/cdn/shop/products/MWZ3635_wallpaper2.jpg?v=1654843598" alt="Image 4"> 
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSV7Q0WL0MiuDGtMVdEQ2aKmllumjObLPu-nJkfOVa35xJZCoTlAECTAZfehw&s" alt="Image 5">
@@ -93,6 +95,7 @@
         <img src="https://media.istockphoto.com/id/1349298950/photo/close-up-of-unrecognizable-hairdresser-cutting-a-female-customer%C3%A2s-hair.jpg?s=612x612&w=0&k=20&c=s-FpOPuIcR5ULS7pKldF2AMNgmD2-sq_wzsTzqPUoxM=" alt="image 8">
         
     </div>
+        <div>
     <button class="carousel-button next-arrow" onclick="nextSlide()">
         <p>></p>
     </button>
